tests/data/libsvm/invalid/non_strictly_increasing_indices.libsvm
1 1:-1.11 2:-2.90 3:187
0 1:-0.52 3:-0.33 2:127.12